--- a/style.css
+++ b/style.css
@@ -73,13 +73,11 @@ body {
 
   }
 }
-
 .slideshow img {
   width: 100%;
   height: 100%;
   object-fit: cover; /* rellena sin deformar */
 }
-
 .hero-overlay{
   position: absolute; 
   top: 50%;
@@ -94,6 +92,37 @@ body {
   color: rgb(0, 0, 0);
   text-decoration: none;
 }
+
+/* Parte del botón menú destacado */
+
+.menu-content {
+  display: none; /* Oculto por defecto */
+  margin-top: 10px;
+  padding: 10px;
+  background: #fff5f5;
+  border-radius: 8px;
+}
+.menu-item {
+  margin-bottom: 12px;
+  border-bottom: 1px solid #ddd;
+  padding-bottom: 8px;
+  display: flex;
+  gap: 10px;
+}
+#menuDestacadoBtn {
+  background: #f04e4e;
+  color: white;
+  border: none;
+  padding: 10px 16px;
+  font-size: 16px;
+  border-radius: 6px;
+  cursor: pointer;
+}
+#menuDestacadoBtn.active {
+  background: #c73737;
+}
+
+
 .hero-title{ font-size:1.6rem; margin-bottom:6px; font-weight:800; }
 .hero-sub{ margin-bottom:10px; opacity:0.95; }
 .hero-ctas{ display:flex; gap:10px; flex-wrap:wrap; }
@@ -195,6 +224,7 @@ body {
 /* MAP placeholder */
 .map-placeholder{
   margin-top:10px;
+  margin-left: 10vw;
   height:200px;
   border-radius:8px;
   display:flex;
@@ -202,7 +232,7 @@ body {
   justify-content:center;
   background:linear-gradient(180deg,transparent,#d5d5d5);
   border:1px dashed rgba(0,0,0,0.06);
-  width: 100%;
+  width: 30vh;
   height: 100%;
   border: 0;
   border-radius: 8px; /* opcional, para que siga el borde redondeado */
