--- a/style.css
+++ b/style.css
@@ -8,6 +8,21 @@ body {
   background: #fff;
 }
 
+
+.delivery{
+  display:flex;
+  gap:22px;
+  align-items:center;
+  border-radius:10px;
+  padding:8px;
+  background: #fff;
+  box-shadow: 0 6px 18px rgba(0,0,0,0.04);
+  width: 100px;
+  margin-left: 150px;
+}
+
+
+
 /* ======== HEADER ======== */
 
 
@@ -301,5 +316,6 @@ body {
   .menu-grid{ grid-template-columns: 1fr 1fr; }
   .menu-item-img {width:140px; height:100px; } 
 {}} 
+
 
 
