--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 /* ===== PRELOADER / ANIMACIÓN DE INICIO ===== */
 
 #preloader {
@@ -5,7 +6,7 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 120vh;
   background-color: #ffffff; /* Fondo blanco (cambialo si querés otro color) */
   display: flex;
   justify-content: center;
@@ -113,6 +114,7 @@ body {
   width: 100%;
   height: 50vh; /* ocupa toda la altura visible del celu/pc */
   overflow: hidden;
+  margin-top: 30px
 
   }
 }
@@ -123,7 +125,7 @@ body {
 }
 .hero-overlay{
   position: absolute; 
-  top: 50%;
+  top: 60%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
